# steel-optimisation-problem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  steel_opt.py  test_steel_opt.py  test_steel_opt_comprehensive.py
.github/workflows/: ci.yml  python-app.yml
src/steel_optimisation_problem/: __init__.py  steel_opt.py
tests/: test_steel_opt.py  test_steel_opt_comprehensive.py
