[tool.poetry]
name = "steel-optimisation-problem"
version = "0.1.0"
description = ""
authors = ["Joshua Jones <joshua.ar.jones@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
