[tool.poetry]
name = "steel-optimisation-problem"
version = "0.1.0"
description = ""
authors = ["Joshua Jones <joshua.ar.jones@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "steel_optimisation_problem", from = "src" }
]
[tool.poetry.dependencies]
python = "^3.12"
 

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
pytest-cov = "^7.0.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
